<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityLocacion">

    <TextView
        android:id="@+id/txtLocacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtLocacion" />

    <Button
        android:id="@+id/btnLocacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLocacion" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGuardar" />

</LinearLayout>